--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,11 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        
+        <h1>Messenger</h1>
+        <a href="messenger/login.html">Login</a>
+        
+        <h1>Examples</h1>
         <div>
             <a href="/WebApp/hello.txt">Hello</a>
             <a href="./hello.txt">Hello (alt)</a>
@@ -18,6 +23,6 @@ and open the template in the editor.
         </div>
         <div>
             <a href="texts/home.html">Texts home</a>
-        </div>
+        </div>                
     </body>
 </html>
